# catmull_clark_subdivision_test

./: README.md  test.sh
scripts/: makefile  makefile~
src/: CMakeLists.txt  face.h  halfedge.h  head.h  io.cpp  io.h  object.cpp  object.h  object.h~  test.cpp  vertex.h
